--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
 .App {
   text-align: center;
+  background-color: #000;
+  color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.side-panels {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+
+
+.App {
+  text-align: center;
 }
 
 .App-logo {
