--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -11,11 +11,13 @@
   .hero-text h1 {
     font-size: 2.5rem;
     line-height: 1.2;
+    font-family: sans-serif;
   }
   
   .highlight {
     color: orange;
     font-style: italic;
+    font-family: "Sharpie", sans-serif;
   }
   
   .email-subscribe {
