--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -18,7 +18,7 @@
   .contact-form h2 {
     font-size: 2em;
     margin-bottom: 20px;
-    color: #01d28e;
+    color: orange;
   }
   
   .form-group {
@@ -45,11 +45,11 @@
   .form-group input:focus,
   .form-group textarea:focus {
     outline: none;
-    border-color: #01d28e;
+    border-color: orange;
   }
   
   .send-btn {
-    background-color: #01d28e;
+    background-color: orange;
     color: #000;
     padding: 12px 24px;
     border: none;
@@ -60,7 +60,7 @@
   }
   
   .send-btn:hover {
-    background-color: #00b27e;
+    background-color: orange;
   }
   
   .contact-gif {
