--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,11 +7,23 @@
     background-color: #000;
     color: white;
 }
+.logo {
+    display: flex; /* Use flex layout for the logo container */
+    align-items: center; /* Align items vertically centered */
+}
+
+.img {
+    width: 50px; /* Set your desired width */
+    height: auto; /* Maintain aspect ratio */
+    margin-right: 10px; /* Space between logo text and image */
+}
 
 .logo h1 {
     font-size: 24px;
     color: white;
+    margin: 0; /* Remove default margin */
 }
+
 
 .nav-links a, .get-started {
     margin: 0 15px;
@@ -29,6 +41,7 @@
     color: white; /* Ensure text is visible on the orange background */
 }
 
+
 .navbar {
     display: flex;
     justify-content: center;
@@ -36,17 +49,19 @@
     background-color: #1a1a1a; /* Dark background color */
     padding: 10px 20px;
     border-radius: 25px;
+    border: 0.1px solid silver; /* Add silver border */
 }
 
+
 .navbar-item {
-    color: #fff; /* White text color */
+    color: white; /* White text color */
     text-decoration: none;
     margin: 0 15px;
     font-size: 18px;
     cursor: pointer;
     transition: color 0.3s, background 0.3s;
     font-family: sans-serif;
-    background: linear-gradient(45deg, white, white); /* Set initial background */
+    background: linear-gradient(45deg, silver, white); /* Set initial background */
     -webkit-background-clip: text; /* Ensure gradient applies to text */
     -webkit-text-fill-color: transparent; /* Ensure text color is transparent */
 }
@@ -62,5 +77,6 @@
     -webkit-background-clip: text; /* Apply gradient to text */
     -webkit-text-fill-color: transparent; /* Ensure text is visible */
 }
+
 
   
